update page home

--- a/page_home.html
+++ b/page_home.html
@@ -22,8 +22,11 @@
                     <div class="cover">
                         <img src="src/photo3.jpg" alt="">
                     </div>
-                    <button class="like">Like</button>
-                    <button class="dislike">Dislike</button>
+                    <div>
+                        <button class="btn like">Like</button>
+                        <button class="btn dislike">Dislike</button>
+                    </div>
+
                 </div>
                 <div class="title">
                     <h1>Ero Manga sensei</h1>
@@ -38,6 +41,81 @@
                 </div>
             </div>
         </header>
+        <main class="main">
+            <div class="card">
+                <table class="table">
+                    <tr>
+                        <td>Tayang</td>
+                        <td>Format</td>
+                        <td>Episode</td>
+                    </tr>
+                    <tr>
+                        <td>EP 1</td>
+                        <td>TV Series</td>
+                        <td>12</td>
+                    </tr>
+                </table>
+            </div>
+            <h3 class="title">Diskripsi</h3>
+            <div class="card">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, neque.</p>
+            </div>
+            <h3 class="title">karakter</h3>
+            <div class="card">
+                <div class="info-char">
+                    <div class="char">
+                        <img src="src/photo1.jpg" alt="">
+                        <div>
+                            <p>Senjyu Muramasa</p>
+                            <p>Main</p>
+                        </div>
+                    </div>
+                    <div class="char2 text-right">
+                        <div>
+                            <p>Senjyu Muramasa</p>
+                            <p>Main</p>
+                        </div>
+                        <img src="src/photo2.jpg" alt="">
+                    </div>
+                </div>                
+            </div>
+            <div class="card">
+                <div class="info-char">
+                    <div class="char">
+                        <img src="src/photo3.jpg" alt="">
+                        <div>
+                            <p>Senjyu Muramasa</p>
+                            <p>Main</p>
+                        </div>
+                    </div>
+                    <div class="char2 text-right">
+                        <div>
+                            <p>Senjyu Muramasa</p>
+                            <p>Main</p>
+                        </div>
+                        <img src="src/photo1.jpg" alt="">
+                    </div>
+                </div>                
+            </div>
+            <div class="card">
+                <div class="info-char">
+                    <div class="char">
+                        <img src="src/photo1.jpg" alt="">
+                        <div>
+                            <p>Senjyu Muramasa</p>
+                            <p>Main</p>
+                        </div>
+                    </div>
+                    <div class="char2 text-right">
+                        <div>
+                            <p>Senjyu Muramasa</p>
+                            <p>Main</p>
+                        </div>
+                        <img src="src/photo2.jpg" alt="">
+                    </div>
+                </div>                
+            </div>
+        </main>
         <aside>
             <nav>
                 <div class="menu menu-1 view">
