--- a/page_home.html
+++ b/page_home.html
@@ -22,7 +22,7 @@
             <div class="cover">
               <img src="src/photo3.jpg" alt="" />
             </div>
-            <div>
+            <div class="btn-box">
               <button class="btn like">Like</button>
               <button class="btn dislike">Dislike</button>
             </div>
@@ -122,13 +122,42 @@
               </div>
             </div>
           </div>
+          <div class="episode-box">
+            <h3 class="title">Episode</h3>
+            <div class="episode">
+              <div class="card">
+                <div class="card-header">
+                  <img src="src/photo5.jpg" alt="" />
+                </div>
+                <div class="card-body">
+                  <p class="card-title">Eromanga sensei EP.1</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <img src="src/photo4.png" alt="" />
+                </div>
+                <div class="card-body">
+                  <p class="card-title">Eromanga sensei EP.1</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <img src="src/photo2.jpg" alt="" />
+                </div>
+                <div class="card-body">
+                  <p class="card-title">Eromanga sensei EP.1</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
       <aside>
         <input id="menuControl" type="checkbox" />
         <nav>
           <div class="menu menu-1 view">
-            <a href="src/gambar4.png">contoh</a>
+            <a href="src/gambar4a.png">contoh</a>
             <a href="#">Winter</a>
             <a href="#">Spring</a>
             <a href="#">Summer</a>
