--- a/page_home.html
+++ b/page_home.html
@@ -37,6 +37,10 @@
                 <a href="#">Watch</a>
                 <a href="#">Character</a>
                 <a href="#">News</a>
+                <a href="#">Overview</a>
+                <a href="#">Watch</a>
+                <a href="#">Character</a>
+                <a href="#">News</a>
               </nav>
             </div>
           </div>
