--- a/page_home.html
+++ b/page_home.html
@@ -154,6 +154,61 @@
                 </div>
               </div>
             </div>
+            <div class="news">
+              <h3 class="title">Berita Terkait</h3>
+              <div class="card">
+                <div class="card-header">
+                  <img src="src/photo1.jpg" alt="" />
+                </div>
+                <div class="card-body">
+                  <p class="card-title">Eromanga sesnsei</p>
+                  <div class="card-text">
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Quia, in. Voluptatem, libero sint magni animi rerum
+                      voluptatibus autem consequuntur aliquid laboriosam illum,
+                      enim dolorum repellat.
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <p>Senin, 12-07-2021</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-header">
+                  <img src="src/photo3.jpg" alt="" />
+                </div>
+                <div class="card-body">
+                  <p class="card-title">
+                    Eromanga sesnsei Eromanga sesnsei Eromanga sesnsei
+                  </p>
+                  <div class="card-text">
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Quia, in. Voluptatem, libero sint magni animi rerum
+                      voluptatibus autem consequuntur aliquid laboriosam illum,
+                      enim dolorum repellat.
+                    </p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Odio cumque culpa nam minima. Voluptas minima a cupiditate
+                      enim animi excepturi blanditiis beatae laborum libero
+                      architecto, molestiae quia alias vero quis?
+                    </p>
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Odio cumque culpa nam minima. Voluptas minima a cupiditate
+                      enim animi excepturi blanditiis beatae laborum libero
+                      architecto, molestiae quia alias vero quis?
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <p>Senin, 12-07-2021</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </main>
