--- a/page_home.html
+++ b/page_home.html
@@ -7,7 +7,7 @@
     <title>Page | Home</title>
     <link rel="stylesheet" href="style-page.css" />
     <link rel="stylesheet" href="style-page-desktop.css" />
-    <link rel="stylesheet" href="style-tab.css" />
+    <link rel="stylesheet" href="style-page-tab.css" />
     <script src="script.js" type="module" defer></script>
   </head>
   <body>
