--- a/page_home.html
+++ b/page_home.html
@@ -33,13 +33,9 @@
             </div>
             <div class="topmenu">
               <nav>
-                <a href="#">Overview</a>
+                <a href="page_home.html">Overview</a>
                 <a href="#">Watch</a>
-                <a href="#">Character</a>
-                <a href="#">News</a>
-                <a href="#">Overview</a>
-                <a href="#">Watch</a>
-                <a href="#">Character</a>
+                <a href="page_char.html">Character</a>
                 <a href="#">News</a>
               </nav>
             </div>
