menambah halaman char

--- a/page_home.html
+++ b/page_home.html
@@ -34,7 +34,7 @@
             <div class="topmenu">
               <nav>
                 <a href="page_home.html">Overview</a>
-                <a href="#">Watch</a>
+                <a href="page_watch.html">Watch</a>
                 <a href="page_char.html">Character</a>
                 <a href="#">News</a>
               </nav>
