--- a/page_char.html
+++ b/page_char.html
@@ -35,7 +35,7 @@
             <div class="topmenu">
               <nav>
                 <a href="page_home.html">Overview</a>
-                <a href="#">Watch</a>
+                <a href="page_watch.html">Watch</a>
                 <a href="page_char.html">Character</a>
                 <a href="#">News</a>
                 <a href="#">Overview</a>
