tambah page news

--- a/page_home.html
+++ b/page_home.html
@@ -36,7 +36,7 @@
                 <a href="page_home.html">Overview</a>
                 <a href="page_watch.html">Watch</a>
                 <a href="page_char.html">Character</a>
-                <a href="#">News</a>
+                <a href="page_news.html">News</a>
               </nav>
             </div>
           </div>
