--- a/page_char.html
+++ b/page_char.html
@@ -37,7 +37,7 @@
                 <a href="page_home.html">Overview</a>
                 <a href="page_watch.html">Watch</a>
                 <a href="page_char.html">Character</a>
-                <a href="#">News</a>
+                <a href="page_news.html">News</a>
                 <a href="#">Overview</a>
               </nav>
             </div>
